[DRS-245] Subject: Page Desirgner BackgroundLayout css fix
Description: Added css to configurable background layout component clases to include padding on top and bottom and separation betwen elements added to added on it also fixed some some css on p element for textBox component which was adding not needed extra padding on bottom

--- a/cartridges/app_drschar_storefront/cartridge/client/default/scss/experience/components/drschar_layouts/configurableBackground.scss
+++ b/cartridges/app_drschar_storefront/cartridge/client/default/scss/experience/components/drschar_layouts/configurableBackground.scss
@@ -65,3 +65,13 @@
     justify-content: center; 
     align-items: center;
 }
+.configurableBackground .row .region.col-12{
+    display:flex;
+    flex-basis: auto;
+    justify-content: center; 
+    align-items: center;
+    flex-direction: column;
+    row-gap: 20px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
